Added metadata support to the create and get recipe APIs.
