# src/Services/CookBook/CookBook.API/wwwroot/swagger/v1/swagger.json
@@ -510,6 +510,24 @@
                 }
               }
             }
+          },
+          "metadata": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "required": [
+                "type",
+                "value"
+              ],
+              "properties": {
+                "type": {
+                  "type": "string"
+                },
+                "value": {
+                  "type": "string"
+                }
+              }
+            }
           }
         }
       },
@@ -613,6 +631,28 @@
                 }
               }
             }
+          },
+          "metadata": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "required": [
+                "recipeId",
+                "type",
+                "value"
+              ],
+              "properties": {
+                "recipeId": {
+                  "type": "string"
+                },
+                "type": {
+                  "type": "string"
+                },
+                "value": {
+                  "type": "string"
+                }
+              }
+            }
           }
         }
       },
@@ -713,6 +753,28 @@
                       "type": "string"
                     }
                   }
+                }
+              }
+            }
+          },
+          "metadata": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "required": [
+                "recipeId",
+                "type",
+                "value"
+              ],
+              "properties": {
+                "recipeId": {
+                  "type": "string"
+                },
+                "type": {
+                  "type": "string"
+                },
+                "value": {
+                  "type": "string"
                 }
               }
             }
